Use i18n for notification when expression was created

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,6 @@ ja:
   user:
     confirm_deletion_of_account: "アカウントを削除しますか？\n \n重要:アカウントを削除すると、このアプリに登録した全てのデータは削除されます。"
     deleted_account: アカウントを削除しました
+  expressions:
+    create:
+      success: 英単語またはフレーズを新規作成しました
