Change redirect URL when the next or previous expression does not exist

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,7 @@
 ja:
+  home:
+    index:
+      no_data: このリストに登録されている英単語またはフレーズはありません
   users:
     confirm_deletion_of_account: "アカウントを削除しますか？\n \n重要:アカウントを削除すると、このアプリに登録した全てのデータは削除されます。"
     destroy:
