--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,6 +6,10 @@ ja:
     index:
       no_data: ブックマークしている英単語またはフレーズはありません
       unauthorized: ログインしていないため閲覧できません
+  memorised_expressions:
+    index:
+      no_data: 覚えた語彙リストに登録している英単語またはフレーズはありません
+      unauthorized: ログインしていないため閲覧できません
   users:
     confirm_deletion_of_account: "アカウントを削除しますか？\n \n重要:アカウントを削除すると、このアプリに登録した全てのデータは削除されます。"
     destroy:
