Redirect root path when quiz that is default list does not have questions

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -42,3 +42,6 @@ ja:
     edit:
       go_to_show: 詳細画面に戻る
       go_to_index: 英単語・フレーズ一覧に戻る
+  quizzes:
+    show:
+      no_data: このリストのクイズに問題が存在しません
