--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,10 @@ ja:
     index:
       no_data: ブックマークしている英単語またはフレーズはありません
       unauthorized: ログインしていないため閲覧できません
+      start_quiz: クイズに挑戦
+    quizzes:
+      show:
+        no_data: このリストのクイズに問題が存在しません
   memorised_expressions:
     index:
       no_data: 覚えた語彙リストに登録している英単語またはフレーズはありません
