Change the name of memorised list in Japanese

--- a/app/javascript/locales/ja.json
+++ b/app/javascript/locales/ja.json
@@ -25,7 +25,7 @@
             "important": "重要: 一度この画面を離れると戻れません。今回の結果をブックマークや覚えたリストに移動させる場合は、下記ボタンをクリックする前に必ず行なってください。",
             "review": "ブックマークした英単語・フレーズを復習",
             "tryAgain": "クイズに再挑戦",
-            "unauthorizedTitle": "ログインしていないためブックマークまたは覚えた語彙リストに英単語・フレーズを保存できません。",
+            "unauthorizedTitle": "ログインしていないためブックマークまたは覚えた英単語・フレーズのリストに保存できません。",
             "unauthorizedSolution": "保存するにはサインアップ / ログインしてください。"
         }
     },
