--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,9 @@ ja:
     index:
       no_data: このリストに登録されている英単語またはフレーズはありません
       create: 新規作成
+      start_quiz: クイズに挑戦
+      try_quiz: クイズを試してみる
+      warning: ブックマークや覚えた英単語・フレーズのリストに保存する機能を使用する場合は必ずログインしてからクイズに挑戦してください
   bookmarked_expressions:
     index:
       no_data: ブックマークしている英単語またはフレーズはありません
