Create introduction page and add the design

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,19 @@
 ja:
+  welcome:
+    index:
+      target: 使い分けが難しい英単語やフレーズをメモ→テストして記憶し、それぞれの場面に合った英語を使えるようになろう
+      about_word_warmup: Word Warmupとは
+      description: 間違えやすい英単語やフレーズをメモし、それらを覚えたかの確認テスト、また覚えていなかったものだけを抽出したリストが自動で作成されるため復習も効率よく行うことができる英語学習者のためのアプリです。
+      note1: イギリス英語を元にした20語の英単語・フレーズが既に登録されています。
+      note2: （それらはログインした後、修正・削除も可能です。）
+      target_user: こんな方におすすめ！
+      user1: 英単語・フレーズを新しく覚えたけど、既によく使う単語との違いが分からずなかなか英会話で新しい単語を使えない
+      user2: 似た意味の英単語・フレーズの違いを学んだけどすぐに忘れてしまう
+      user3: 可算名詞、不可算名詞で意味の異なる英単語を正しく使えるようになりたい
+      after_login: ログイン後出来ること
+      function1: 混乱しやすい英単語・フレーズを混乱しやすいもの同士で登録し、それぞれの英単語・フレーズの意味や例文、使い分けの解説を登録できる
+      function2: 英単語・フレーズをブックマークや覚えた語彙リストに振り分けることができ効率よく復習が可能
+      try_app: 使ってみる
   home:
     index:
       no_data: このリストに登録されている英単語またはフレーズはありません
