--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -20,7 +20,8 @@ ja:
       create: 新規作成
       start_quiz: クイズに挑戦
       try_quiz: クイズを試してみる
-      warning: ブックマークや覚えた英単語・フレーズのリストに保存する機能を使用する場合は必ずログインしてからクイズに挑戦してください
+      warning: ログイン後に挑戦すると英単語・フレーズをブックマークや覚えた語彙リストに保存可能となります
+      how_to_create_data: ログインすると英単語やフレーズの登録が可能です
   bookmarked_expressions:
     index:
       no_data: ブックマークしている英単語またはフレーズはありません
@@ -76,4 +77,4 @@ ja:
   not_logged_in: ログインが必要です
   words_and_phrases: 英単語・フレーズ
   bookmark: ブックマーク
-  memorised_list: 覚えた英単語・フレーズ
+  memorised_list: 覚えた語彙
