Add design to quiz

--- a/app/javascript/locales/ja.json
+++ b/app/javascript/locales/ja.json
@@ -16,16 +16,17 @@
             "showUserAnswers": "自分の解答を表示",
             "blank": "無解答",
             "numberOfCorrectAnswers": "{totalQuestions}問中{numberOfCorrectAnswers}問正解です",
-            "bookmark": "不正解だった英単語又はフレーズと、それと一緒に保存されている英単語・フレーズを全てブックマークする",
+            "bookmark": "不正解だった英単語又はフレーズと、それと一緒に保存されている英単語・フレーズを全てブックマーク",
             "bookmarkList": "ブックマークする英単語・フレーズ",
-            "moveToMemorisedWordsList": "一緒に保存されている英単語・フレーズの全てが正解したものを覚えたリストに移動する",
-            "memorisedWordsList": "覚えたリストに移動する英単語・フレーズ",
+            "moveToMemorisedWordsList": "一緒に保存されている英単語・フレーズの全てが正解したものを覚えた語彙リストに保存",
+            "memorisedWordsList": "覚えた語彙リストに保存する英単語・フレーズ",
             "save": "保存する",
-            "recommendNextAction": "ブックマークや覚えたリストに英単語・フレーズを移動させた後は復習しましょう！",
-            "important": "重要: 一度この画面を離れると戻れません。今回の結果をブックマークや覚えたリストに移動させる場合は、下記ボタンをクリックする前に必ず行なってください。",
+            "recommendNextAction": "ブックマークや覚えた語彙リストに英単語・フレーズを保存した後は復習しましょう！",
+            "important": "重要: ",
+            "importantContent": "一度この画面を離れると戻れません。今回の結果をブックマークや覚えた語彙リストに保存する場合は、下記ボタンをクリックする前に必ず行なってください。",
             "review": "ブックマークした英単語・フレーズを復習",
             "tryAgain": "クイズに再挑戦",
-            "unauthorizedTitle": "ログインしていないためブックマークまたは覚えた英単語・フレーズのリストに保存できません。",
+            "unauthorizedTitle": "ログインしていないため保存できません。",
             "unauthorizedSolution": "保存するにはサインアップ / ログインしてください。"
         }
     },
