Create footer when user has not logged in

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -78,3 +78,5 @@ ja:
   words_and_phrases: 英単語・フレーズ
   bookmark: ブックマーク
   memorised_list: 覚えた語彙
+  terms_of_service: 利用規約
+  privacy_policy: プライバシーポリシー
