Change the link destination

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -66,7 +66,7 @@ ja:
       example: 例文
       note: メモ
       tag: タグ
-      go_to_index: 英単語・フレーズ一覧に戻る
+      go_to_index: 一覧に戻る
       edit: 編集
       delete: 削除
       confirm_deletion_of_expression: この英単語又はフレーズを本当に削除しますか？
