--- a/app/javascript/locales/ja.json
+++ b/app/javascript/locales/ja.json
@@ -40,7 +40,7 @@
         "about": "{word}について",
         "next": "次へ",
         "explanation": "{word}の意味や前ページで登録した他の英単語 / フレーズ（{comparison}）との違いを入力してください",
-        "notice": "ここで入力する内容はこのアプリで行えるテストの問題として出題されます。\n前ページで登録した英単語やフレーズ自体を含めると答えが問題の一部として出力されてしまうので注意してください。",
+        "notice": "ここで入力する内容はこのアプリで行えるクイズの問題として出題されます。\n前ページで登録した英単語やフレーズ自体を含めると答えが問題の一部として出力されてしまうので注意してください。",
         "example": "例文を入力してください",
         "firstExample": "例文１",
         "secondExample": "例文２",
