Fix design or sentences to be more understandable

--- a/app/javascript/locales/ja.json
+++ b/app/javascript/locales/ja.json
@@ -3,7 +3,7 @@
     "back": "戻る",
     "quiz": {
         "question": "問題",
-        "placeholder": "解答を入力",
+        "inputTheAnswer": "解答を入力してください",
         "submit": "クイズに解答する",
         "next": "次へ",
         "correct": "正解",
@@ -14,47 +14,48 @@
             "wellDone": "クイズお疲れ様でした！",
             "showUserAnswers": "自分の解答を表示",
             "blank": "無解答",
-            "bookmark": "不正解だった英単語又はフレーズと、それと一緒に保存されている英単語・フレーズを全てブックマーク",
-            "bookmarkList": "ブックマークする英単語・フレーズ",
-            "moveToMemorisedWordsList": "一緒に保存されている英単語・フレーズの全てが正解したものを覚えた語彙リストに保存",
-            "memorisedWordsList": "覚えた語彙リストに保存する英単語・フレーズ",
+            "bookmark": "不正解だった英単語・フレーズと、それと一緒に保存されている英単語・フレーズを全て要復習リストに保存",
+            "bookmarkList": "要復習リストに保存する英単語・フレーズ",
+            "moveToMemorisedWordsList": "一緒に保存されている英単語・フレーズの全てが正解したものを覚えたリストに保存",
+            "memorisedWordsList": "覚えたリストに保存する英単語・フレーズ",
             "save": "保存する",
-            "recommendNextAction": "ブックマークや覚えた語彙リストに英単語・フレーズを保存した後は復習しましょう！",
+            "recommendNextAction": "要復習リストや覚えたリストに英単語・フレーズを保存した後は復習しましょう！",
             "important": "重要: ",
-            "importantContent": "一度この画面を離れると戻れません。今回の結果をブックマークや覚えた語彙リストに保存する場合は、下記ボタンをクリックする前に必ず行なってください。",
-            "review": "ブックマークした英単語・フレーズを復習",
+            "importantContent": "一度この画面を離れると戻れません。今回の結果を要復習リストや覚えたリストに保存する場合は、下記ボタンをクリックする前に必ず行なってください。",
+            "review": "要復習リストに保存した英単語・フレーズを復習",
             "tryAgain": "クイズに再挑戦",
             "unauthorizedTitle": "ログインしていないため保存できません。",
             "unauthorizedSolution": "保存するにはサインアップ / ログインしてください。"
         }
     },
     "form": {
-        "expressions": "意味の違いや使い分けを学習したい英単語又はフレーズを入力してください",
-        "firstExpression": "英単語 / フレーズ１",
-        "secondExpression": "英単語 / フレーズ２",
-        "thirdExpression": "英単語 / フレーズ３(任意)",
-        "fourthExpression": "英単語 / フレーズ４(任意)",
-        "fifthExpression": "英単語 / フレーズ５(任意)",
+        "expressions": "意味の違いや使い分けを学習したい英単語・フレーズを入力してください",
+        "firstExpression": "英単語・フレーズ１",
+        "secondExpression": "英単語・フレーズ２",
+        "thirdExpression": "英単語・フレーズ３(任意)",
+        "fourthExpression": "英単語・フレーズ４(任意)",
+        "fifthExpression": "英単語・フレーズ５(任意)",
         "next": "次へ",
-        "notice": "ここで入力する内容はこのアプリで行えるクイズの問題として出題されます。\n前ページで登録した英単語やフレーズ自体を含めると答えが問題の一部として出力されてしまうので注意してください。",
+        "notice": "ここで入力する内容はこのアプリで行えるクイズの問題として出題されます。\n前ページで登録した英単語・フレーズ自体を含めると答えが問題の一部として出力されてしまうので注意してください。",
         "example": "例文を入力してください",
         "firstExample": "例文１",
         "secondExample": "例文２",
         "thirdExample": "例文３",
         "note": "メモ（任意）",
         "tags": "タグ（任意）",
-        "expressionsError": "英単語又はフレーズを２つ以上入力してください",
+        "expressionsError": "英単語・フレーズを２つ以上入力してください",
         "howToUseTagInput": "タグ入力後エンターキーで登録",
         "create": "登録",
         "edit": "編集する"
     },
     "stepNavigation": {
-        "wordsOrPhrases": "単語又はフレーズ",
+        "wordsOrPhrases": "単語・フレーズ",
         "explanationAndExamples": "意味・例文",
         "noteAndTags": "メモ・タグ(任意)"
     },
     "incrementalSearch": {
-        "placeholder": "英単語・フレーズ、メモまたはタグ",
+        "explanation": "英単語・フレーズ、メモまたはタグを入力",
+        "placeholder": "例) balcony",
         "noData": "一致する英単語・フレーズはありません"
     }
 }
